--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
